Change mobile view using media screens
Mobile view now displays screenshots with hyperlinks instead of
iframes.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <section id="toDoList" class="section d-flex justify-content-center py-5" data-color="#f6d7cb">
     <div class="col-lg-9 my-auto">
       <div class="project-wrapper row card bg-dark flex-lg-row">
-        <div class="glitch-embed-wrap col-md-9 mx-auto">
+        <div class="glitch-embed-wrap col-md-9 mx-auto desktop">
           <iframe
             src="https://glitch.com/embed/#!/embed/todo-list-tf?path=package.json&previewSize=100"
             title="todo-list-tf on Glitch"
@@ -112,6 +112,9 @@
         </div>
         <div class="col-md-3 mx-auto text-left">
         <h3>Personal Project - To Do List</h3>
+        <div class="proj-img-wrap col-md-9 mx-auto mobile bg-light my-3">
+          <a href="https://todo-list-tf.glitch.me" target="_blank"><img src="toDoList.PNG"></img></a>
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
         <ul>
         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
@@ -126,13 +129,16 @@
       <div class="project-wrapper row card bg-dark flex-lg-row">
         <div class="col-md-3 mx-auto text-left">
           <h3>fCC Project - Stock Price Checker</h3>
+          <div class="proj-img-wrap col-md-9 mx-auto mobile bg-light my-3">
+            <a href="https://fcc-stock-price-checker-tf.glitch.me" target="_blank"><img src="stockPriceChecker.PNG"></img></a>
+          </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
           <ul>
             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
             <li>Mauris eu risus ut magna dignissim fermentum id eu tellus.</li>
           </ul>
         </div>
-        <div class="glitch-embed-wrap col-md-9 mx-auto">
+        <div class="glitch-embed-wrap col-md-9 mx-auto desktop">
           <iframe
             src="https://glitch.com/embed/#!/embed/fcc-stock-price-checker-tf?path=package.json&previewSize=100"
             title="fcc-stock-price-checker-tf on Glitch"
@@ -146,7 +152,7 @@
   <section id="exerciseTracker" class="section d-flex justify-content-center py-5" data-color="#f6edcb">
     <div class="col-lg-9 my-auto">
       <div class="project-wrapper row card bg-dark flex-lg-row">
-        <div class="glitch-embed-wrap col-md-9 mx-auto">
+        <div class="glitch-embed-wrap col-md-9 mx-auto desktop">
           <iframe
               src="https://glitch.com/embed/#!/embed/fcc-exercise-tracker-rest-api-tf?path=README.md&previewSize=100"
               title="fcc-exercise-tracker-rest-api-tf on Glitch"
@@ -156,6 +162,9 @@
         </div>
         <div class="col-md-3 mx-auto text-left">
         <h3>fCC Project - Exercise Tracker</h3>
+        <div class="proj-img-wrap col-md-9 mx-auto mobile bg-light my-3">
+          <a href="https://fcc-exercise-tracker-rest-api-tf.glitch.me" target="_blank"><img src="exerciseTracker.PNG"></img></a>
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
         <ul>
         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
@@ -170,13 +179,16 @@
       <div class="project-wrapper row card bg-dark flex-lg-row">
         <div class="col-md-3 mx-auto text-left">
         <h3>fCC Project - Choropleth Map</h3>
+        <div class="proj-img-wrap col-md-9 mx-auto mobile bg-light my-3">
+          <a href="https://codepen.io/tfox121/pen/pozXqrW" target="_blank"><img src="https://screenshot.codepen.io/3285860.pozXqrW.efb02a1f-c888-4df7-a179-a44e9b828023.png"></img></a>
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
         <ul>
         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
         <li>Mauris eu risus ut magna dignissim fermentum id eu tellus.</li>
         </ul>
         </div>
-        <div class="glitch-embed-wrap col-md-9 mx-auto">
+        <div class="glitch-embed-wrap col-md-9 mx-auto desktop">
           <iframe height="100%" style="width: 100%;" scrolling="no" title="FCC: Choropleth Map" src="https://codepen.io/tfox121/embed/preview/pozXqrW?height=790&theme-id=light&default-tab=result" frameborder="no" allowtransparency="true" allowfullscreen="true">
             See the Pen <a href='https://codepen.io/tfox121/pen/pozXqrW'>FCC: Choropleth Map</a> by tfox121
             (<a href='https://codepen.io/tfox121'>@tfox121</a>) on <a href='https://codepen.io'>CodePen</a>.
@@ -188,7 +200,7 @@
   <section id="jsCalculator" class="section d-flex justify-content-center py-5" data-color="#f6d7cb">
     <div class="col-lg-9 my-auto">
       <div class="project-wrapper row card bg-dark flex-lg-row">
-        <div class="glitch-embed-wrap col-md-9 mx-auto">
+        <div class="glitch-embed-wrap col-md-9 mx-auto desktop">
           <iframe height="100%" style="width: 100%;" scrolling="no" title="FCC: Javascript Calculator " src="https://codepen.io/tfox121/embed/preview/MNJZap?height=265&theme-id=light&default-tab=result" frameborder="no" allowtransparency="true" allowfullscreen="true">
             See the Pen <a href='https://codepen.io/tfox121/pen/MNJZap'>FCC: Javascript Calculator </a> by tfox121
             (<a href='https://codepen.io/tfox121'>@tfox121</a>) on <a href='https://codepen.io'>CodePen</a>.
@@ -196,6 +208,9 @@
         </div>
         <div class="col-md-3 mx-auto text-left">
         <h3>fCC Project - JavaScript Calculator</h3>
+        <div class="proj-img-wrap col-md-9 mx-auto mobile bg-light my-3">
+          <a href="https://codepen.io/tfox121/pen/MNJZap" target="_blank"><img src="https://screenshot.codepen.io/3285860.MNJZap.e7f8e4ba-ce8f-43f0-a5a9-7c6151315763.png"></img></a>
+        </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam lacinia in odio non imperdiet. Maecenas pretium euismod porta. Nullam at velit in nulla dictum facilisis eget vel purus.</p>
         <ul>
         <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
