Create new section for contact form

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p class="navheader text-nowrap">freeCodeCamp Projects</p>
       <button class="text-nowrap" onclick="scrollHandler('stockPriceChecker')">Stock Price Checker</button>
       <button class="text-nowrap" onclick="scrollHandler('exerciseTracker')">Exercise Tracker</button>
-      <button class="text-nowrap" onclick="scrollHandler('choroplethMap')">Chloropleth Map</button>
+      <button class="text-nowrap" onclick="scrollHandler('choroplethMap')">Choropleth Map</button>
       <button class="text-nowrap" onclick="scrollHandler('jsCalculator')">JavaScript Calculator</button>
     </div>
     <nav id="topNav" class="top-nav navbar navbar-expand-lg bg-dark fixed-top">
@@ -207,6 +207,30 @@
         </div>
       </section>
       <section id="jsCalculator" class="d-flex justify-content-center py-5" data-color="#f6d7cb">
+        <div class="col-lg-9 my-auto">
+          <div class="project-wrapper row card bg-dark flex-row shadow">
+            <div class="glitch-embed-wrap col-md-9 mx-auto d-none d-md-block ">
+              <iframe height="100%" style="width: 100%;" scrolling="no" title="FCC: Javascript Calculator " src="https://codepen.io/tfox121/embed/preview/MNJZap?height=265&theme-id=light&default-tab=result" frameborder="no" allowtransparency="true" allowfullscreen="true">
+                See the Pen <a href='https://codepen.io/tfox121/pen/MNJZap'>FCC: Javascript Calculator </a> by tfox121
+                (<a href='https://codepen.io/tfox121'>@tfox121</a>) on <a href='https://codepen.io'>CodePen</a>.
+              </iframe>
+            </div>
+            <div class="col-md-3 mx-auto text-left d-flex flex-column">
+              <h3>fCC Project - JavaScript Calculator</h3>
+              <div class="proj-img-wrap col-md-9 mx-auto my-3 d-md-none d-block">
+                <a href="https://codepen.io/tfox121/pen/MNJZap" target="_blank"><img class="w-100" src="https://screenshot.codepen.io/3285860.MNJZap.e7f8e4ba-ce8f-43f0-a5a9-7c6151315763.png"></img></a>
+              </div>
+              <p>One of the first projects that really tested me. Looking back at my work I can see a lot of things that I'd do differently, but it was a great way to learn more about asynchronous programming, especially in relation to React and managing state.<br><br>One of the hardest parts of the project way putting together the logic to be able to handle the contextual interpretation of the use of the minus button. A simple +/- toggle would have been a lot easier, but that's not what fCC's testing called for!</p>
+              <ul>
+                <li>React</li>
+                <li>JavaScript</li>
+              </ul>
+              <a id="githubLink" class="btn mt-auto text-decoration-none row" href="https://github.com/tfox121/javascriptCalculator" target="_blank"><i class="fab fa-github"></i> See it on Github</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="contactForm" class="d-flex justify-content-center py-5" data-color="#f6d7cb">
         <div class="col-lg-9 my-auto">
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="glitch-embed-wrap col-md-9 mx-auto d-none d-md-block ">
