Move images to 'images' folder

--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
                 <div id="portfolioCarouselMob" class="carousel slide proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <a href="https://tf-portfolio.glitch.me" target="_blank"><img class="w-100" src="portfolio.PNG"></img></a>
+                      <a href="https://tf-portfolio.glitch.me" target="_blank"><img class="w-100" src="images/portfolio.PNG"></img></a>
                       <div id="mob-carousel-caption" class="carousel-caption">
                         <h2>FRONT END</h2>
                       </div>
                     </div>
                     <div class="carousel-item">
-                      <a href="https://glitch.com/edit/#!/tf-portfolio-contact" target="_blank"><img class="w-100" src="portfolioContactLambda.PNG"></img></a>
+                      <a href="https://glitch.com/edit/#!/tf-portfolio-contact" target="_blank"><img class="w-100" src="images/portfolioContactLambda.PNG"></img></a>
                       <div id="mob-carousel-caption" class="carousel-caption">
                         <h2>BACK END</h2>
                       </div>
@@ -255,7 +255,7 @@
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>Personal Project - To Do List</h3>
               <div class="proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block">
-                <a href="https://todo-list-tf.glitch.me" target="_blank"><img class="w-100" src="toDoList.PNG"></img></a>
+                <a href="https://todo-list-tf.glitch.me" target="_blank"><img class="w-100" src="images/toDoList.PNG"></img></a>
               </div>
               <p>I decided to build my first app from the ground up using Node/Express along with MongoDB Atlas for the database. I also took the opportunity to learn Nunjucks and implement it in the project.<br><br>I <a href="https://trello.com/b/kGcryyi7/coding-practice-todolist-app" target="_blank">used Trello</a> to plan my workflow which helped me get a better understanding of the platform.</p>
               <ul>
@@ -277,7 +277,7 @@
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>fCC Project - Stock Price Checker</h3>
               <div class="proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block">
-                <a href="https://fcc-stock-price-checker-tf.glitch.me" target="_blank"><img class="w-100" src="stockPriceChecker.PNG"></img></a>
+                <a href="https://fcc-stock-price-checker-tf.glitch.me" target="_blank"><img class="w-100" src="images/stockPriceChecker.PNG"></img></a>
               </div>
               <p>This is the fCC project that took me the longest to complete. The most difficult element was creating the unique "Stock Likes" per IP functionality. I acheived it by logging IPs as a subdocument of the Stock item whenever a "Like" is submitted and checking all "Likes" against the logged IPs, giving me a degree of session management. It was also a good exercise in using another website's API in my code</p>
               <ul>
@@ -313,7 +313,7 @@
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>fCC Project - Exercise Tracker</h3>
               <div class="proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block">
-                <a href="https://fcc-exercise-tracker-rest-api-tf.glitch.me" target="_blank"><img class="w-100" src="exerciseTracker.PNG"></img></a>
+                <a href="https://fcc-exercise-tracker-rest-api-tf.glitch.me" target="_blank"><img class="w-100" src="images/exerciseTracker.PNG"></img></a>
               </div>
               <p>This was the first project that got me working with MongoDB/Mongoose in conjunction with Express in a more in-depth way. It helped to give me a much better sense of how no-SQL databases can be used to handle user data</p>
               <ul>
