--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                       title="tf-portfolio on Glitch"
                       allow="geolocation; microphone; camera; midi; vr; encrypted-media">
                   </iframe>
-                  <div id="carousel-caption" class="carousel-caption">
-                    <h2>FRONT END</h2>
+                  <div class="carousel-caption">
+                    <h4 class="card d-inline px-2 bg-dark">FRONT END</h4>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -181,8 +181,8 @@
                     title="tf-portfolio-contact on Glitch"
                     allow="geolocation; microphone; camera; midi; vr; encrypted-media">
                   </iframe>
-                  <div id="carousel-caption" class="carousel-caption">
-                    <h2>BACK END</h2>
+                  <div class="carousel-caption">
+                    <h4 class="card d-inline px-2 bg-dark">BACK END</h4>
                   </div>
                 </div>
               </div>
@@ -202,13 +202,13 @@
                     <div class="carousel-item active">
                       <a href="https://tf-portfolio.glitch.me" target="_blank"><img class="w-100" src="images/portfolio.PNG"></a>
                       <div class="carousel-caption">
-                        <h2>FRONT END</h2>
+                        <h4>FRONT END</h4>
                       </div>
                     </div>
                     <div class="carousel-item">
                       <a href="https://glitch.com/edit/#!/tf-portfolio-contact" target="_blank"><img class="w-100" src="images/portfolioContactLambda.PNG"></a>
                       <div class="carousel-caption">
-                        <h2>BACK END</h2>
+                        <h4>BACK END</h4>
                       </div>
                     </div>
                   </div>
