Change topnav internal link from <a> to <button>

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a class="nav-link" href="https://www.freecodecamp.org/tfox121" target="_blank">freeCodeCamp</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="scrollHandler('contactForm')">Message me!</a>
+            <button class="nav-link" onclick="scrollHandler('contactForm')">Message me!</button>
           </li>
         </ul>
       </div>
