Move API gateway to prod URL

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </div>
       </section>
       <section id="portfolio" class="d-flex justify-content-center py-5" data-color="#f6d7cb">
-        <div class="col-xl-9 col-lg-11 col-12 my-auto">
+        <div class="col-xl-10 col-lg-11 col-12 my-auto">
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div id="portfolioCarousel" class="carousel slide glitch-embed-wrap col-md-9 mx-auto d-none d-md-block" data-ride="carousel">
               <div class="carousel-inner">
@@ -172,7 +172,7 @@
                       allow="geolocation; microphone; camera; midi; vr; encrypted-media">
                   </iframe>
                   <div class="carousel-caption">
-                    <h4 class="card d-inline px-2 bg-dark">FRONT END</h4>
+                    <h4 class="card d-inline px-2 bg-dark shadow">FRONT END</h4>
                   </div>
                 </div>
                 <div class="carousel-item">
@@ -182,7 +182,7 @@
                     allow="geolocation; microphone; camera; midi; vr; encrypted-media">
                   </iframe>
                   <div class="carousel-caption">
-                    <h4 class="card d-inline px-2 bg-dark">BACK END</h4>
+                    <h4 class="card d-inline px-2 bg-dark shadow">BACK END</h4>
                   </div>
                 </div>
               </div>
@@ -242,7 +242,7 @@
         </div>
       </section>
       <section id="toDoList" class="d-flex justify-content-center py-5" data-color="#f6edcb">
-        <div class="col-xl-9 col-lg-11 col-12 my-auto">
+        <div class="col-xl-10 col-lg-11 col-12 my-auto">
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="glitch-embed-wrap col-md-9 mx-auto d-none d-md-block">
               <iframe
@@ -272,7 +272,7 @@
         </div>
       </section>
       <section id="stockPriceChecker" class="d-flex justify-content-center py-5" data-color="#e2cbf6">
-        <div class="col-xl-9 col-lg-11 col-12 my-auto">
+        <div class="col-xl-10 col-lg-11 col-12 my-auto">
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>fCC Project - Stock Price Checker</h3>
@@ -300,7 +300,7 @@
         </div>
       </section>
       <section id="exerciseTracker" class="d-flex justify-content-center py-5" data-color="#cbf1f6">
-        <div class="col-xl-9 col-lg-11 col-12 my-auto">
+        <div class="col-xl-10 col-lg-11 col-12 my-auto">
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="glitch-embed-wrap col-md-9 mx-auto d-none d-md-block">
               <iframe
@@ -327,7 +327,7 @@
         </div>
       </section>
       <section id="choroplethMap" class="d-flex justify-content-center py-5" data-color="#f6d7cb">
-        <div class="col-xl-9 col-lg-11 col-12 my-auto">
+        <div class="col-xl-10 col-lg-11 col-12 my-auto">
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="col-md-3 mx-auto text-left">
               <h3>fCC Project - Choropleth Map</h3>
@@ -349,7 +349,7 @@
         </div>
       </section>
       <section id="jsCalculator" class="d-flex justify-content-center py-5" data-color="#f6edcb">
-        <div class="col-xl-9 col-lg-11 col-12 my-auto">
+        <div class="col-xl-10 col-lg-11 col-12 my-auto">
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="glitch-embed-wrap col-md-9 mx-auto d-none d-md-block ">
               <iframe height="100%" style="width: 100%;" scrolling="no" title="FCC: Javascript Calculator " src="https://codepen.io/tfox121/embed/preview/MNJZap?height=265&theme-id=light&default-tab=result" frameborder="no" allowtransparency="true" allowfullscreen="true">
@@ -381,13 +381,13 @@
                   <div class="row">
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" autocomplete="name" id="contactNamegtyh" name="contactNamegtyh" class="form-control" required>
+                            <input type="text" autocomplete="name" id="contactNamegtyh" name="contactNamegtyh" class="form-control" maxlength="100" required>
                             <label for="name" class="">Your name</label>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" autocomplete="email" id="contactEmailgtyh" name="contactEmailgtyh" class="form-control" required>
+                            <input type="email" autocomplete="email" id="contactEmailgtyh" name="contactEmailgtyh" class="form-control" maxlength="200" required>
                             <label for="email" class="">Your email address</label>
                         </div>
                     </div>
